# student_manage_system

./: .gitignore  Cargo.toml
src/: main.rs
src/api/: api.rs  mod.rs
src/class/: class.rs  mod.rs
src/curse/: curse.rs  mod.rs
src/storage/: mod.rs  storage.rs
src/student/: mod.rs  student.rs
src/teacher/: mod.rs  teacher.rs
src/user/: mod.rs  user.rs
