[package]
name = "student_manage_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = "0.25.0"
serde="1.0.87"
serde_json = "1.0.87"
sha256 = "1.1.1"
tokio = { version = "1.11", features = ["full"] }



